--- a/Background/package.json
+++ b/Background/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "backend",
+  "name": "background",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:build": "tsc -w",
-    "start:run": "nodemon dist/main.js",
+    "start:run": "nodemon dist/index.js",
     "start": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
-    "@types/joi": "^17.2.3",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/mssql": "^8.1.2",
-    "@types/nodemon": "^1.19.2",
-    "@types/uuid": "^9.0.1",
-    "bcrypt": "^5.1.0",
+    "@types/node": "^18.15.5",
+    "@types/node-cron": "^3.0.7",
+    "@types/nodemailer": "^6.4.7",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "joi": "^17.8.4",
-    "jsonwebtoken": "^9.0.0",
     "mssql": "^9.1.1",
-    "tedious": "^15.1.3",
-    "uuid": "^9.0.0"
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.2",
+    "nodemon": "^2.0.21"
   }
 }
